fix tab visible / hidden + fix tooltip position

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -72,7 +72,7 @@ button {
   position: absolute;
   top: 200%;
   left: 100%;
-  transform: translateX(-50%);
+  transform: translateX(-95%);
   opacity: 0;
   visibility: hidden;
   background-color: #ffffff;
@@ -93,7 +93,7 @@ button {
   opacity: 1;
   visibility: visible;
   background: #ffffff;
-  transform: translate(-50%, -5px);
+  transform: translate(-95%, 0px);
 }
 
 .hidden-tabs {
